Update changelog and bump version

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": {
     "name": "Brady Holt"
   },
-  "version": "1.4.0",
+  "version": "1.5.0",
   "publisher": "bradymholt",
   "icon": "icon.png",
   "galleryBanner": {
@@ -15,8 +15,18 @@
   "engines": {
     "vscode": "^1.19.0"
   },
-  "categories": ["Programming Languages", "Formatters", "Other"],
-  "keywords": ["pgsql", "postgres", "PostgreSQL", "SQL", "Formatting"],
+  "categories": [
+    "Programming Languages",
+    "Formatters",
+    "Other"
+  ],
+  "keywords": [
+    "pgsql",
+    "postgres",
+    "PostgreSQL",
+    "SQL",
+    "Formatting"
+  ],
   "license": "MIT",
   "homepage": "https://github.com/bradymholt/vscode-pgFormatter",
   "repository": {
@@ -26,14 +36,24 @@
   "bugs": {
     "url": "https://github.com/bradymholt/vscode-pgFormatter/issues"
   },
-  "activationEvents": ["onLanguage:sql", "onLanguage:pgsql"],
+  "activationEvents": [
+    "onLanguage:sql",
+    "onLanguage:pgsql"
+  ],
   "main": "./out/extension",
   "contributes": {
     "languages": [
       {
         "id": "sql",
-        "aliases": ["SQL", "sql", "pgsql"],
-        "extensions": ["sql", "pgsql"]
+        "aliases": [
+          "SQL",
+          "sql",
+          "pgsql"
+        ],
+        "extensions": [
+          "sql",
+          "pgsql"
+        ]
       }
     ],
     "configuration": {
@@ -66,13 +86,23 @@
         "pgFormatter.functionCase": {
           "type": "string",
           "default": "unchanged",
-          "enum": ["unchanged", "lowercase", "uppercase", "capitalize"],
+          "enum": [
+            "unchanged",
+            "lowercase",
+            "uppercase",
+            "capitalize"
+          ],
           "description": "Case of the function names"
         },
         "pgFormatter.keywordCase": {
           "type": "string",
           "default": "uppercase",
-          "enum": ["unchanged", "lowercase", "uppercase", "capitalize"],
+          "enum": [
+            "unchanged",
+            "lowercase",
+            "uppercase",
+            "capitalize"
+          ],
           "description": "Case of the reserved keywords"
         },
         "pgFormatter.perlBinPath": {
