Add support for comma-break options specified by Gilles Darold

--- a/package.json
+++ b/package.json
@@ -73,6 +73,11 @@
           "default": false,
           "description": "Use preceding comma in parameter list"
         },
+        "pgFormatter.commaBreak": {
+          "type": "boolean",
+          "default": false,
+          "description": "In insert statement, add a newline after each comma"
+        },
         "pgFormatter.commaEnd": {
           "type": "boolean",
           "default": true,
