Add compatibility with ckolkman.vscode-postgres VS Code extension
PostgreSQL Management Tool by Chris Kolkman adds a new "Postgres" language mode to VS Code which practically renders using any formatter aimed for the default "SQL" mode impossible

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "activationEvents": [
     "onLanguage:sql",
-    "onLanguage:pgsql"
+    "onLanguage:pgsql",
+    "onLanguage:postgres"
   ],
   "main": "./out/extension",
   "contributes": {
@@ -49,6 +50,17 @@
           "SQL",
           "sql",
           "pgsql"
+        ],
+        "extensions": [
+          "sql",
+          "pgsql"
+        ]
+      },
+      {
+        "id": "postgres",
+        "aliases": [
+          "PostgreSQL",
+          "Postgres"
         ],
         "extensions": [
           "sql",
