--- a/package.json
+++ b/package.json
@@ -128,6 +128,10 @@
           "default": false,
           "description": "Use another formatting type for some statements"
         },
+        "pgFormatter.wrapLimit": {
+          "type": "number",          
+          "description": "Wrap queries at a certain length"
+        },
         "pgFormatter.placeholder": {
           "type": "string",
           "default": null,
