--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "color": "#555555"
   },
   "engines": {
-    "vscode": "^1.19.0"
+    "vscode": "^1.54.0"
   },
   "categories": [
     "Programming Languages",
@@ -145,7 +145,7 @@
           "type": "string",
           "default": null,
           "description": "Path to file containing a list of functions names to use the same formatting as PostgreSQL internal functions"
-        },        
+        },
         "pgFormatter.pgFormatterPath": {
           "type": "string",
           "default": null,
@@ -167,16 +167,20 @@
   "scripts": {
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test",
+    "pretest": "npm run compile",
+    "test": "node ./out/test/runTest.js",
     "vscode:prepublish": "npm run compile",
     "vscode:publish": "vsce publish"
   },
   "devDependencies": {
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.11.8",
-    "typescript": "^4.0.3",
-    "vscode": "^1.1.37"
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^12.11.7",
+    "@types/vscode": "^1.54.0",
+    "glob": "^7.1.6",
+    "mocha": "^8.2.1",
+    "typescript": "^4.1.3",
+    "vscode-test": "^1.5.0"
   },
   "dependencies": {
     "psqlformat": "^1.10.0"
