Modernize build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
-name: build
-
+name: Build
 on:
+  workflow_dispatch:
   push:
     branches:
     - main
@@ -9,23 +9,19 @@ on:
     - main
 jobs:
   build:
-
     runs-on: macOS-latest
-
     strategy:
       matrix:
-        node-version: [12.x]
-
+        node-version: [16]
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@v3
+    - name: Install Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: |
-        npm install
-        npm run build --if-present
-        npm test
+    - name: npm install
+      run: npm install
+    - name: npm test
+      run: npm test
       env:
         CI: true
