--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.11.7",
     "@types/vscode": "^1.54.0",
+    "@vscode/vsce": "^2.18.0",
     "glob": "^7.1.6",
     "mocha": "^10.2.0",
     "typescript": "^4.1.3",
