--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,7 @@ jobs:
           node-version: 16
           registry-url: "https://registry.npmjs.org"
       - run: npm install
+      - run: npm test
       - name: Version
         run: |
           npm version ${{ github.event.inputs.version_type }} --force -m "Version %s"
