Run publish workflow on macOS so tests can run

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ on:
         - patch
 jobs:
   publish:
-    runs-on: ubuntu-latest    
+    runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v3
         with:
