--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
         "pgFormatter.keepNewline": {
           "type": "boolean",
           "default": false,
-          "description": "Preserve empty line in plpgsql code"
+          "description": "Preserve empty lines"
         },
         "pgFormatter.functionCase": {
           "type": "string",
@@ -214,6 +214,6 @@
     "vscode-test": "^1.5.0"
   },
   "dependencies": {
-    "psqlformat": "1.20.0"
+    "psqlformat": "1.21.0"
   }
 }
